; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_txrx.c_ice_add_rx_frag.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_txrx.c_ice_add_rx_frag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ice_rx_buf = type { i32, i32 }
%struct.sk_buff = type { i32 }
%struct.TYPE_2__ = type { i32 }

@ICE_RXBUF_2048 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ice_rx_buf*, %struct.sk_buff*, i32)* @ice_add_rx_frag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ice_add_rx_frag(%struct.ice_rx_buf* %0, %struct.sk_buff* %1, i32 %2) #0 {
  %4 = alloca %struct.ice_rx_buf*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ice_rx_buf* %0, %struct.ice_rx_buf** %4, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @ICE_RXBUF_2048, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  br label %30

12:                                               ; preds = %3
  %13 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %14 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %15 = call %struct.TYPE_2__* @skb_shinfo(%struct.sk_buff* %14)
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.ice_rx_buf*, %struct.ice_rx_buf** %4, align 8
  %19 = getelementptr inbounds %struct.ice_rx_buf, %struct.ice_rx_buf* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.ice_rx_buf*, %struct.ice_rx_buf** %4, align 8
  %22 = getelementptr inbounds %struct.ice_rx_buf, %struct.ice_rx_buf* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @skb_add_rx_frag(%struct.sk_buff* %13, i32 %17, i32 %20, i32 %23, i32 %24, i32 %25)
  %27 = load %struct.ice_rx_buf*, %struct.ice_rx_buf** %4, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @ice_rx_buf_adjust_pg_offset(%struct.ice_rx_buf* %27, i32 %28)
  br label %30

30:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @skb_add_rx_frag(%struct.sk_buff*, i32, i32, i32, i32, i32) #1

declare dso_local %struct.TYPE_2__* @skb_shinfo(%struct.sk_buff*) #1

declare dso_local i32 @ice_rx_buf_adjust_pg_offset(%struct.ice_rx_buf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
